--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +17,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Capstone"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.capstone.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/path_provider" />
+        </provider>
+
+        <activity
+            android:name=".ui.pages.UploadPage"
+            android:exported="false"
+            android:label="@string/title_activity_upload_page"
+            android:theme="@style/Theme.Capstone" />
+        <activity
+            android:name=".ui.pages.DetailPage"
+            android:exported="false"
+            android:label="@string/title_activity_detail_page"
+            android:theme="@style/Theme.Capstone" />
+        <activity
+            android:name=".ui.component.JetTopBar"
+            android:exported="false"
+            android:label="@string/title_activity_jet_top_bar"
+            android:theme="@style/Theme.Capstone" />
+        <activity
+            android:name=".ui.pages.MainPage"
+            android:exported="false"
+            android:label="@string/title_activity_main_page"
+            android:theme="@style/Theme.Capstone" />
         <activity
             android:name=".ui.component.JetSearchBar"
             android:exported="false"
@@ -25,6 +60,7 @@
         <activity
             android:name=".ui.component.JetTextField"
             android:exported="false"
+
             android:label="@string/title_activity_text_field"
             android:theme="@style/Theme.Capstone" />
         <activity
